Update CSE 325, CSE 476, Data Engineer, Skills

--- a/Resume.html
+++ b/Resume.html
@@ -23,9 +23,9 @@
           University Technology Office, Arizona State University
         </div>
         <ul>
-          <li>Write Python ETL scripts using Prefect to fulfill data requests from university departments, faculty, and staff.</li>
+          <li>Write Python data pipelines using Prefect to fulfill data requests from university departments, faculty, and staff, mostly on AWS infrastructure.</li>
+          <li>Update and maintain the Jenkins code pipelines that deploy the department's data pipelines.</li>
           <li>Helped maintain some university portal web pages, which retrieve and display data from university APIs.</li>
-          <li>Wrote a translation script between Control-M and Prefect, so that the execution of Prefect flows can be orchestrated by Control-M.</li>
         </ul>
       </div>
       <div class="job">
@@ -78,7 +78,7 @@
           CSE 476: <b>Natural Language Processing</b> A
         </div>
         <ul>
-          <li>Description: Principles of computational linguistics, formal syntax, and semantics, as applied to the design of software with natural (human) language I/O.</li>
+          <li>Learned about many different ways to model human languages and how to use them, including n-gram modelling, part-of-speech tagging, syntax parsing, semantic role labelling, and semantic word embeddings.</li>
         </ul>
       </div>
       <div>
@@ -86,8 +86,9 @@
           CSE 325: <b>Embedded Microprocessor Systems</b> A+
         </div>
         <ul>
-          <li>Description: System-level programming and analysis of embedded microprocessors systems. Fundamental concepts of digital system design for embedded system applications.</li>
-          <li>Final Project: Build a simple robot with a microprocessor and program it to navigate a simple area, such as a classroom.</li>
+          <li>Learned about the fundamentals of embedded microprocessor system design and programming, including various forms of digital/analog conversion, hardware interrupts, hardware timing, and external device communication.</li>
+          <li>Final Project: Built a simple, autonomous robot with a FRDM-KL46Z microprocessor and programmed it to navigate physical and color-coded mazes. Used external devices including PWM controlled motors with Hall sensors for speed/direction awareness, ultrasonic sensor with timing-based, GPIO communication, PWM servo (to turn the ultrasonic sensor), black/white ADC sensors, and an I2C color sensor.</li>
+          <li>As an extension of the project, I attached an I2C Wii Nunchuk to the robot so that I could drive it around manually.</li>
         </ul>
       </div>
       <div>
@@ -115,17 +116,17 @@
       </div>
       <div>
         <b>Programming Languages:</b><br>
-        Python, Java, C/C++, SQL, Typescript/Javascript, C#, Ruby, Rust, Erlang, Prolog
+        Python, C/C++, SQL, Typescript/Javascript, Java, C#, Ruby, Rust, Erlang, Prolog
       </div>
       <div>
-        <b>Frameworks/Modules:</b><br>
+        <b>Frameworks/Libraries:</b><br>
         Python: Pandas, Jupyter Notebooks, Matplotlib, Numpy, Tkinter<br>
         Typescript/Javascript: React<br>
         Java: Swing
       </div>
       <div>
         <b>Products/Technologies:</b><br>
-        Prefect, SQLite, Oracle Database/Oracle SQL Developer
+        Prefect, AWS Core Services, SQLite, Oracle Database/Oracle SQL Developer
       </div>
     </div>
   </body>
