Expand Instructional Aide

--- a/Resume.html
+++ b/Resume.html
@@ -30,6 +30,17 @@
       </div>
       <div class="job">
         <div>
+          <i>Aug 2021 - May 2022</i>&emsp;
+          <b>Software Developer</b>&nbsp;
+          Arizona State University Honors Thesis Pathway
+        </div>
+        <ul>
+          <li>Worked with a student software development team and a student accounting team to build a web-based accounting product for a private accountant to be released in the future.</li>
+          <li>Developed the web application in the React and Express Javascript frameworks and hosted it on AWS infrastructure.</li>
+        </ul>
+      </div>
+      <div class="job">
+        <div>
           <i>Jan 2021 - May 2021</i>&emsp;
           <b>Database Systems & Python Instructional Aide</b>&nbsp;
           New College, Arizona State University
@@ -38,19 +49,7 @@
           <li>Developed resources to assist students in learning the material, such as example projects, instructions on using software, and reference sheets.</li>
           <li>Assisted the professor in running the class sessions over Zoom.</li>
           <li>Held office hours for and maintained email correspondence with students to help them complete projects and learn the material.</li>
-        </ul>
-      </div>
-      <div class="job">
-        <div>
-          <i>Dec 2013 - Aug 2019</i>&emsp;
-          <b>Ice Skating Instructor</b>&nbsp;
-          Schenley Park Ice Rink and RMU Island Sports Center
-        </div>
-        <ul>
-          <li>Taught basic skills ice skating classes to groups of students aged 5-14.</li>
-          <li>Taught lower-level partnered ice dances to students of all ages.</li>
-          <li>Partnered my ice dance students during test sessions.</li>
-          <li>Helped run the volunteer Learn-to-Skate program at the Schenley Park Ice Rink during my final year, organizing volunteer instructors, reserving ice time, evaluating students, and corresponding with parents</li>
+          <li>Helped teach students the basics of using Python for data science, including extracting data from sometimes messy documents in CSV or XML format, organizing the data and storing it in a standard relational database, and extracting the data from the database for statistical analysis and visualization.</li>
         </ul>
       </div>
     </div>
@@ -75,20 +74,21 @@
       </div>
       <div>
         <div>
-          CSE 476: <b>Natural Language Processing</b> A
-        </div>
-        <ul>
-          <li>Learned about many different ways to model human languages and how to use them, including n-gram modelling, part-of-speech tagging, syntax parsing, semantic role labelling, and semantic word embeddings.</li>
-        </ul>
-      </div>
-      <div>
-        <div>
           CSE 325: <b>Embedded Microprocessor Systems</b> A+
         </div>
         <ul>
           <li>Learned about the fundamentals of embedded microprocessor system design and programming, including various forms of digital/analog conversion, hardware interrupts, hardware timing, and external device communication.</li>
           <li>Final Project: Built a simple, autonomous robot with a FRDM-KL46Z microprocessor and programmed it to navigate physical and color-coded mazes. Used external devices including PWM controlled motors with Hall sensors for speed/direction awareness, ultrasonic sensor with timing-based, GPIO communication, PWM servo (to turn the ultrasonic sensor), black/white ADC sensors, and an I2C color sensor.</li>
-          <li>As an extension of the project, I attached an I2C Wii Nunchuk to the robot so that I could drive it around manually.</li>
+          <li>As an extension of the project, I attached an I2C Wii Nunchuk controller to the robot so that I could drive it around manually.</li>
+        </ul>
+      </div>
+      <div>
+        <div>
+          CSE 476: <b>Natural Language Processing</b> A
+        </div>
+        <ul>
+          <li>Learned about many different ways to model human languages and how to use them, including n-gram modelling, part-of-speech tagging, syntax parsing, semantic role labelling, and semantic word embeddings.</li>
+          <li>Used knowledge from class to build models that can detect the language of a particular text and to analyze differences in word usage from different sources.</li>
         </ul>
       </div>
       <div>
@@ -98,15 +98,6 @@
         <ul>
           <li>Learned about the service oriented computing philosophy, multithreaded and event-driven programming, using XML for data storage and transfer, and web application development and security.</li>
           <li>Final Project: Built an ASPX web application in .NET with user registration, authentication, and different access priveledges, access to third-party APIs, and a service oriented architecture using WCF services.</li>
-        </ul>
-      </div>
-      <div>
-        <div>
-          ACO 501: <b>Database Systems & Python</b> Instruction Aide
-        </div>
-        <ul>
-          <li>Taught students the basics of using Python for data science, including extracting data from sometimes messy documents in CSV or XML format, organizing the data and storing it in a standard relational database, and extracting the data from the database for statistical analysis and visualization.</li>
-          <li>Final Project: Develop a Jupyter Notebook that loads real-world scientific data from an ASU professor into a database, extracts that data from the database, and provides statistical analyses and visualizations desired by the professor.</li>
         </ul>
       </div>
     </div>
@@ -121,12 +112,13 @@
       <div>
         <b>Frameworks/Libraries:</b><br>
         Python: Pandas, Jupyter Notebooks, Matplotlib, Numpy, Tkinter<br>
-        Typescript/Javascript: React<br>
+        Typescript/Javascript: React, Express<br>
         Java: Swing
       </div>
       <div>
         <b>Products/Technologies:</b><br>
-        Prefect, AWS Core Services, SQLite, Oracle Database/Oracle SQL Developer
+        Infrastructure: AWS Core Services, Terraform, Jenkins<br>
+        Data: Prefect, SQLite, Oracle Database/Oracle SQL Developer
       </div>
     </div>
   </body>
