Mockup Certifications Section

--- a/Resume.html
+++ b/Resume.html
@@ -68,6 +68,14 @@
         GPA 4.0, Wexford Homeschool
       </div>
     </div>
+    <!-- <div id="certifications" class="section">
+      <div>
+        <b class="header">Certifications</b>
+      </div>
+      <div>
+        AWS Certified Cloud Practitioner
+      </div>
+    </div> -->
     <div id="classes" class="section">
       <div>
         <b class="header">Classes in Specialized Areas</b>
