--- a/Resume.html
+++ b/Resume.html
@@ -68,14 +68,14 @@
         GPA 4.0, Wexford Homeschool
       </div>
     </div>
-    <!-- <div id="certifications" class="section">
+    <div id="certifications" class="section">
       <div>
-        <b class="header">Certifications</b>
+        <b class="header">Industry Certifications</b>
       </div>
       <div>
-        AWS Certified Cloud Practitioner
+        <i>May 28, 2022</i>&emsp;<b>AWS Certified Cloud Practitioner</b>
       </div>
-    </div> -->
+    </div>
     <div id="classes" class="section">
       <div>
         <b class="header">Classes in Specialized Areas</b>
@@ -115,13 +115,12 @@
       </div>
       <div>
         <b>Programming Languages:</b><br>
-        Python, C/C++, SQL, Typescript/Javascript, Java, C#, Ruby, Rust, Erlang, Prolog
+        Python, C/C++, SQL, Typescript/Javascript, C#, Java, Rust, Prolog
       </div>
       <div>
         <b>Frameworks/Libraries:</b><br>
-        Python: Pandas, Jupyter Notebooks, Matplotlib, Numpy, Tkinter<br>
+        Python: Pandas, Jupyter Notebooks, Matplotlib<br>
         Typescript/Javascript: React, Express<br>
-        Java: Swing
       </div>
       <div>
         <b>Products/Technologies:</b><br>
