Cloud Developer Assistant

--- a/Resume.html
+++ b/Resume.html
@@ -42,7 +42,7 @@
       <div class="job">
         <div>
           <i>Jan 2021 - May 2021</i>&emsp;
-          <b>Database Systems & Python Instructional Aide</b>&nbsp;
+          <b>Instructional Aide, ACO 501: Database Systems & Python</b>&nbsp;
           New College, Arizona State University
         </div>
         <ul>
@@ -92,13 +92,22 @@
       </div>
       <div>
         <div>
+          ACO 330: <b>Computer Networks</b> A
+        </div>
+        <ul>
+          <li>Learned about network architecture, protocols, and security, socket programming, flow and congestion control, and link-layer technologies.</li>
+          <li>Projects: Built a simple client-server application that encrypted data and a wget clone that operated at the TCP layer rather than the HTTP layer.</li>
+        </ul>
+      </div>
+      <!-- <div>
+        <div>
           CSE 476: <b>Natural Language Processing</b> A
         </div>
         <ul>
           <li>Learned about many different ways to model human languages and how to use them, including n-gram modelling, part-of-speech tagging, syntax parsing, semantic role labelling, and semantic word embeddings.</li>
           <li>Used knowledge from class to build models that can detect the language of a particular text and to analyze differences in word usage from different sources.</li>
         </ul>
-      </div>
+      </div> -->
       <div>
         <div>
           CSE 445: <b>Distributed Software Development</b> A+
