General Resume Updated Dates and Address

--- a/Resume.html
+++ b/Resume.html
@@ -9,7 +9,7 @@
         <b class="title">Benjamin McLemore</b><br>
         brmclemo@asu.edu<br>
         724-719-4835<br>
-        701 E. Apache Blvd. #1101, Tempe, AZ 85281
+        701 E Apache Blvd, Bldg H #2102, Tempe, AZ 85281
       </div>
     </div>
     <div id="work-experience" class="section">
@@ -58,7 +58,7 @@
         <b class="header">Education</b>
       </div>
       <div>
-        <i>Aug 2019 - Present</i>&emsp;
+        <i>Aug 2019 - May 2023</i>&emsp;
         <b>Computer Science BS, Barrett Honors</b>,&nbsp;
         4.0 GPA, Arizona State University
       </div>
@@ -90,7 +90,7 @@
           <li>As an extension of the project, I attached an I2C Wii Nunchuk controller to the robot so that I could drive it around manually.</li>
         </ul>
       </div>
-      <div>
+      <!-- <div>
         <div>
           ACO 330: <b>Computer Networks</b> A
         </div>
@@ -98,8 +98,8 @@
           <li>Learned about network architecture, protocols, and security, socket programming, flow and congestion control, and link-layer technologies.</li>
           <li>Projects: Built a simple client-server application that encrypted data and a wget clone that operated at the TCP layer rather than the HTTP layer.</li>
         </ul>
-      </div>
-      <!-- <div>
+      </div> -->
+      <div>
         <div>
           CSE 476: <b>Natural Language Processing</b> A
         </div>
@@ -107,7 +107,7 @@
           <li>Learned about many different ways to model human languages and how to use them, including n-gram modelling, part-of-speech tagging, syntax parsing, semantic role labelling, and semantic word embeddings.</li>
           <li>Used knowledge from class to build models that can detect the language of a particular text and to analyze differences in word usage from different sources.</li>
         </ul>
-      </div> -->
+      </div>
       <div>
         <div>
           CSE 445: <b>Distributed Software Development</b> A+
