Add technical team lead and advanced networks

--- a/Resume.html
+++ b/Resume.html
@@ -18,7 +18,19 @@
       </div>
       <div class="job">
         <div>
-          <i>Nov 2021 - Present</i>&emsp;
+          <i>Aug 2022 - Present</i>&emsp;
+          <b>Technical Team Lead, BI</b>&nbsp;
+          Inecta
+        </div>
+        <ul>
+          <li>Manage a team of developers and run the business intelligence department of the company.</li>
+          <li>Architect and maintain an enterprise grade reporting application built in Plotly Dash.</li>
+          <li>Architect data pipelines that integrate data from Microsoft Dynamics Business Central, Azure DevOps, Smartsheets, and other business tools.</li>
+        </ul>
+      </div>
+      <div class="job">
+        <div>
+          <i>Nov 2021 - Aug 2022</i>&emsp;
           <b>Data Engineer</b>&nbsp;
           University Technology Office, Arizona State University
         </div>
@@ -39,7 +51,7 @@
           <li>Developed the web application in the React and Express Javascript frameworks and hosted it on AWS infrastructure.</li>
         </ul>
       </div>
-      <div class="job">
+      <!-- <div class="job">
         <div>
           <i>Jan 2021 - May 2021</i>&emsp;
           <b>Instructional Aide, ACO 501: Database Systems & Python</b>&nbsp;
@@ -51,7 +63,7 @@
           <li>Held office hours for and maintained email correspondence with students to help them complete projects and learn the material.</li>
           <li>Helped teach students the basics of using Python for data science, including extracting data from sometimes messy documents in CSV or XML format, organizing the data and storing it in a standard relational database, and extracting the data from the database for statistical analysis and visualization.</li>
         </ul>
-      </div>
+      </div> -->
     </div>
     <div id="education" class="section">
       <div>
@@ -62,11 +74,11 @@
         <b>Computer Science BS, Barrett Honors</b>,&nbsp;
         4.0 GPA, Arizona State University
       </div>
-      <div>
+      <!-- <div>
         <i>Jun 2019</i>&emsp;
         <b>Graduated High School</b>,&nbsp;
         GPA 4.0, Wexford Homeschool
-      </div>
+      </div> -->
     </div>
     <div id="certifications" class="section">
       <div>
@@ -79,6 +91,17 @@
     <div id="classes" class="section">
       <div>
         <b class="header">Classes in Specialized Areas</b>
+      </div>
+      <div>
+        <div>
+          CSE 534: <b>Advanced Computer Networks</b> A
+        </div>
+        <ul>
+          <li>Learned about various network architectures not used in the traditional Internet protocol stack such as named-data networks, with a focus on Future Internet Architectures and implementation details with SDN technologies such as OpenFlow and P4.</li>
+          <li>Explored various networking testbeds currently deployed around the world, including FABRIC and SLICES, as well as their objectives and architectures.</li>
+          <li>Gained experience developing on FABRIC, a national research testbed.</li>
+          <li>Final Project: Designed and implemented a prototype for a networking protocol that could abstract L3 network traffic with many benefits including security and the ability to support multiple Internet Architectures simultaneously on the same network hardware.</li>
+        </ul>
       </div>
       <div>
         <div>
@@ -99,7 +122,7 @@
           <li>Projects: Built a simple client-server application that encrypted data and a wget clone that operated at the TCP layer rather than the HTTP layer.</li>
         </ul>
       </div> -->
-      <div>
+      <!-- <div>
         <div>
           CSE 476: <b>Natural Language Processing</b> A
         </div>
@@ -107,7 +130,7 @@
           <li>Learned about many different ways to model human languages and how to use them, including n-gram modelling, part-of-speech tagging, syntax parsing, semantic role labelling, and semantic word embeddings.</li>
           <li>Used knowledge from class to build models that can detect the language of a particular text and to analyze differences in word usage from different sources.</li>
         </ul>
-      </div>
+      </div> -->
       <div>
         <div>
           CSE 445: <b>Distributed Software Development</b> A+
@@ -124,17 +147,19 @@
       </div>
       <div>
         <b>Programming Languages:</b><br>
-        Python, C/C++, SQL, Typescript/Javascript, C#, Java, Rust, Prolog
+        Python, Rust, SQL, C/C++, Typescript/Javascript, C#, Java, Prolog
       </div>
       <div>
         <b>Frameworks/Libraries:</b><br>
-        Python: Pandas, Jupyter Notebooks, Matplotlib<br>
+        Python: Pandas, Plotly, Plotly Dash, Jupyter Notebooks, Matplotlib<br>
         Typescript/Javascript: React, Express<br>
       </div>
       <div>
         <b>Products/Technologies:</b><br>
         Infrastructure: AWS Core Services, Terraform, Jenkins<br>
-        Data: Prefect, SQLite, Oracle Database/Oracle SQL Developer
+        Development: Git, Azure DevOps<br>
+        Data: Prefect, SQLite, Oracle Database/Oracle SQL Developer<br>
+        Software: Azure Devops, Microsoft Dynamics Business Central
       </div>
     </div>
   </body>
