--- a/Resume.html
+++ b/Resume.html
@@ -7,7 +7,7 @@
     <div class="header-section">
       <div>
         <b class="title">Benjamin McLemore</b><br>
-        brmclemo@asu.edu<br>
+        mclemorebenjamin@gmail.edu<br>
         724-719-4835<br>
         701 E Apache Blvd, Bldg H #2102, Tempe, AZ 85281
       </div>
