Update Job Info

--- a/Resume.html
+++ b/Resume.html
@@ -24,7 +24,7 @@
     <!-- Technical Team Lead, Frontend-->
     <div class="job">
       <div>
-        <i>Aug 2023 - Jun 2024</i>&emsp;
+        <i>Aug 2023 - Present</i>&emsp;
         <b>Technical Team Lead, Frontend</b>&nbsp;
         Inecta
       </div>
