--- a/Resume.html
+++ b/Resume.html
@@ -21,10 +21,32 @@
       <b class="header">Work Experience</b>
     </div>
 
+    <!-- Full Stack Software Engineer -->
+    <div class="job">
+      <div>
+        <i>Jun 2024 - Present</i>&emsp;
+        <b>Full Stack Software Engineer</b>&nbsp;
+        Inecta
+      </div>
+      <ul>
+        <li>Build a <b>Next.js</b> web application that serves as a customer portal, a BI tool, and an intuitive
+          frontend for customers' <b>MS Dynamics Business Central</b> database.</li>
+        <li>Work with data-centric JavaScript libraries, such as <b>Apache ECharts</b> and <b>AG Grid</b></li>
+        <li>Deployed the application on <b>Azure</b> as an <b>App Service</b> and used <b>App Registrations</b> and
+          <b>Microsoft Entra</b> for SSO.
+        </li>
+        <li>Set up CI/CD deployments and versioning for the application and inecta mobile apps in <b>Github</b> using
+          <b>Github Actions.</b>
+        </li>
+        <li>Work with inecta Food ERP consultants business analysts and customers to architect technical solutions.</li>
+        <li>Perform code reviews and build inecta code libraries to help maintain code quality.</li>
+      </ul>
+    </div>
+
     <!-- Technical Team Lead, Frontend-->
     <div class="job">
       <div>
-        <i>Aug 2023 - Present</i>&emsp;
+        <i>Nov 2022 - Jun 2024</i>&emsp;
         <b>Technical Team Lead, Frontend</b>&nbsp;
         Inecta
       </div>
@@ -32,9 +54,13 @@
         <li>Manage a team of software developers and designers building the frontend for an ERP SaaS product.</li>
         <li>Architect and build a <b>Next.js</b> web application that serves as a customer portal, a BI tool, and an
           intuitive frontend for customers' ERP databases.</li>
+        <li>Architect and maintain an enterprise grade reporting application built in <b>Plotly Dash.</b></li>
         <li>Work with data-centric JavaScript libraries, such as <b>Apache ECharts</b>, <b>AG Grid</b>, and
           <b>Bryntum</b>.
         </li>
+        <li>Architect data pipelines that integrate data from <b>Microsoft Dynamics Business Central</b>, <b>Azure
+            DevOps</b>,
+          Smartsheets, and other business tools.</li>
         <li>Deployed the application on <b>Azure</b> as an <b>App Service</b> and used <b>App Registrations</b> and
           <b>Microsoft Entra</b> for SSO.
         </li>
@@ -43,18 +69,16 @@
       </ul>
     </div>
 
-    <!-- Technical Team Lead, BI -->
+
+    <!-- Full Stack Developer -->
     <div class="job">
       <div>
-        <i>Aug 2022 - Jul 2023</i>&emsp;
-        <b>Technical Team Lead, BI</b>&nbsp;
+        <i>Aug 2021 - Oct 2022</i>&emsp;
+        <b>Full Stack Developer</b>&nbsp;
         Inecta
       </div>
       <ul>
-        <li>Manage a team of developers and run the business intelligence department of the company.</li>
-        <li>Architect and maintain an enterprise grade reporting application built in <b>Plotly Dash.</b></li>
-        <li>Architect data pipelines that integrate data from Microsoft Dynamics Business Central, Azure DevOps,
-          Smartsheets, and other business tools.</li>
+        <li>Write Dash reports that give the company and clients custom views of their Business Central data.</li>
       </ul>
     </div>
 
@@ -74,32 +98,13 @@
           university APIs.</li>
       </ul>
     </div>
-
-    <!-- Software Developer -->
-    <div class="job">
-      <div>
-        <i>Aug 2021 - May 2022</i>&emsp;
-        <b>Software Developer</b>&nbsp;
-        Arizona State University Honors Thesis Pathway
-      </div>
-      <ul>
-        <li>Worked with a student software development team and a student accounting team to build a web-based
-          accounting product for a private accountant to be released in the future.</li>
-        <li>Developed the web application in the <b>React</b> and <b>Express</b> JavaScript frameworks and hosted it on
-          <b>AWS</b>
-          infrastructure.
-        </li>
-      </ul>
-    </div>
   </div>
 
   <!-- Personal Projects -->
-  <div id="projects" class="section">
+  <!-- <div id="projects" class="section">
     <div>
       <b class="header">Projects</b>
     </div>
-
-    <!-- Flashcard application -->
     <div>
       &emsp;<b>Flashcard Application</b>
     </div>
@@ -113,7 +118,7 @@
       </ul>
     </div>
 
-  </div>
+  </div> -->
 
   <!-- Education -->
   <div id="education" class="section">
